vpc.tf
/* Create a VPC */

resource "aws_vpc" "main" {
    cidr_block = "10.${var.cidr_block}.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true

    tags {
        Name = "vpc-${var.main}-${var.env}"
    }
}
